# SSRRR

./: Cargo.toml
assets/: Various Artist - Moonlight 1.25x (flashnias) [Synthesis pattern].osu  test.osu
benches/: file_read_benchmark.rs  phases_benchmark.rs  preprocess_benchmark.rs  star_rating_benchmark.rs
examples/: star_rating_calculator.rs
src/: lib.rs  params.rs
src/algorithm/: interpolation.rs  mod.rs  smoothing.rs  sums.rs  utils.rs
src/algorithm/bars/: abar.rs  jbar.rs  mod.rs  pbar.rs  rbar.rs  xbar.rs
src/algorithm/calculations/: anchor.rs  ck.rs  corners.rs  key_usage.rs  ln.rs  mod.rs
src/algorithm/process/: abar.rs  anchor.rs  ck.rs  corners.rs  jbar.rs  key_usage.rs  ln.rs  mod.rs  normalize.rs  pbar.rs  preprocess.rs  process.rs  rbar.rs  xbar.rs
src/file_parser/: builder.rs  hit_objects.rs  metadata.rs  mod.rs  reader.rs
src/types/: calculation.rs  error.rs  map.rs  mod.rs  note.rs
