[package]
name = "ssrrr"
version = "0.1.0"
edition = "2024"
description = "A rust way of sunnyxxy's star rating rework"
license = "MIT"
repository = "https://github.com/Osef-me/SSRRR"
authors = ["Glubus"]
keywords = ["osu", "game"]
categories = ["games"]


[dependencies]
tokio = "1.47.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[example]]
name = "star_rating_calculator"
path = "examples/star_rating_calculator.rs"

[[bench]]
name = "star_rating_benchmark"
harness = false

[[bench]]
name = "file_read_benchmark"
harness = false

[[bench]]
name = "preprocess_benchmark"
harness = false

[[bench]]
name = "phases_benchmark"
harness = false
